Removed older news items.  Added Application Note #25.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@24158 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/README.html
+++ b/README.html
@@ -16,311 +16,6 @@ environment and a very easy to deploy target operating system.</p>
 <h2>News</h2>
 <ul>
 <li>
-<p>12 February 2025 -- Added <a href=
-"https://git.kernel.org/pub/scm/libs/libgpiod/libgpiod.git/tree">libgpiod</a>
-to the toolchain libraries packages
-<b><tt>gcc-*-muntsos-linux-gnu-ctng-libs</tt></b> and added the <b>libgpiod</b>
-runtime extension package. Because they use the same <b><tt>ioctl()</tt></b>
-services, <b>libgpiod</b> and <b>libsimpleio</b> interoperate without any
-problems. Note that this <b>libgpiod</b> is newer than that in Debian 12
-(Bookworm), including Raspberry Pi OS.</p>
-</li>
-<li>
-<p>17 February 2025 -- Upgraded the .Net Runtime to 9.0.2. Upgraded the
-Raspberry Pi kernel to 6.6.78.</p>
-</li>
-<li>
-<p>20 February 2025 -- <a href=
-"https://crosstool-ng.github.io">Crosstool-NG</a> release 1.27.0 was published
-a few days ago. I have used it to build the 10th iteration of the
-<b>MuntsOS</b> cross-toolchain packages, upgrading binutils to 2.43, GCC to
-14.2.0, and glibc to 2.41. GCC 14.2.0 includes support for <a href=
-"http://www.ada-auth.org/standards/ada22.html">Ada 2022</a> and a lot of
-Modula-2 fixes. All of the extensions, kernels, and thin servers have been
-rebuilt with the new GCC 14.2.0 toolchain. The previous GCC 13.2.0
-cross-toolchain packages, extensions, kernels, and thin servers have been moved
-to the <a href="https://repo.munts.com/muntsos/attic">attic.</a></p>
-</li>
-<li>
-<p>23 February 2025 -- Added initial support for the 64-bit <a href=
-"https://www.beagleboard.org/boards/beagleplay">BeaglePlay</a>. Next up will
-probably be the 64-bit <a href=
-"https://www.waveshare.com/wiki/VisionFive2">VisionFive 2</a>. I have already
-built a GCC 14.2.0 <b><tt>riscv64</tt></b> cross-toolchain for
-<b>MuntsOS</b>.</p>
-</li>
-<li>
-<p>6 March 2025 -- Finally got around to completing a couple of loose ends for
-the Raspberry Pi CM5 on a CM5IO. This has proven to be a very nice setup.</p>
-</li>
-<li>
-<p>13 March 2025 -- Support for the BeaglePlay is now done. See <a href=
-"https://repo.munts.com/muntsos/doc/AppNote19-BeaglePlay.pdf">Application Note
-#19</a> for important information.</p>
-</li>
-<li>
-<p>18 March 2025 -- Enabled encryption for <b>repo.munts.com</b> (<a href=
-"https://github.com/pmunts/muntsos/issues/2">GitHub issue #2</a>) which is now
-accessible either without encryption at <a href=
-"http://repo.munts.com">http://repo.munts.com</a> or with encryption at
-<a href="https://repo.munts.com">https://repo.munts.com</a>. Document and
-script hyperlinks that formerly referenced <b>git.munts.com</b> now reference
-<a href="https://repo.munts.com/muntsos">https://repo.munts.com/muntsos</a> and
-<b><tt>sysconfig</tt></b> has switched from <b><tt>wget</tt></b> to
-<b><tt>curl</tt></b>.</p>
-</li>
-<li>
-<p>22 March 2025 -- Overhauled <b>MuntsOS</b> email support: Rewrote <a href=
-"https://repo.munts.com/muntsos/doc/AppNote16-Sending-Email.pdf">Application
-Note #16</a>, upgraded the <b><tt>dma</tt></b> and <b><tt>emailrelay</tt></b>
-extension packages to latest releases, and updated their configuration files
-for authenticated SMTP relay. Added <b><tt>mailtunnel</tt></b>, an extension
-package template.</p>
-</li>
-<li>
-<p>28 March 2025 -- Switched the BeaglePlay kernel branch to
-6.6.58-ti-arm64-r24. Upgraded a lot of library components: libusb to 1.0.28,
-openssl to 3.4.1, icu to 77.1, curl to 8.12.1, xmlrpc to 1.60.04,
-libmysqlclient to 3.4.4, gdbm to 1.25, paho.mqtt.c to 1.3.14, libffi to 3.4.7,
-util-linux to 2.41, and xz to 5.8.0. Toolchain Debian package gcc-*-libs has
-subsumed gcc-*-libaws.</p>
-</li>
-<li>
-<p>19 May 2025 -- Added extension packages <b><tt>libwioe5p2p</tt></b>,
-<b><tt>libwioe5ham1</tt></b>, and <b><tt>libwioe5ham2</tt></b> as well as both
-Ada and C# .Net example programs. These all result from a deep dive study about
-using the <a href=
-"https://wiki.seeedstudio.com/LoRa-E5_STM32WLE5JC_Module">Wio-E5 LoRa
-Transceiver Module</a> for Amateur Radio operation in the <a href=
-"https://en.wikipedia.org/wiki/33-centimeter_band">33-cm band</a>. See <a href=
-"https://repo.munts.com/libsimpleio/doc/WioE5LoRaP2P.pdf">WioE5LoRaP2P.pdf</a>
-for more background information. Fixed a bug in <b><tt>sysconfig</tt></b> that
-installed <b><tt>.nupkg</tt></b> extension package files to
-<b><tt>/boot/autoexec.d</tt></b> instead of <b><tt>/boot/packages</tt></b>.
-Modified <b><tt>nupkg</tt></b> to support an additional (and hereafter
-canonical) scheme for naming .Net Core extension package files:
-<b><tt>&lt;progname&gt;-muntsos-all.nupkg</tt></b>. The older (and hereafter
-deprecated) naming scheme (as built by <b><tt>dotnet pack</tt></b> or Visual
-Studio <b><tt>Build -&gt; Pack</tt></b>)
-<b><tt>&lt;progname&gt;.&lt;progversion&gt;.nupkg</tt></b> is still
-supported.</p>
-</li>
-<li>
-<p>10 July 2025 -- Following a June vacation hiatus, I upgraded library
-components readline to 8.3, libgpiod to 2.2.2, libusb to 1.0.29, hidapi to
-0.15.0, openssl to 3.5.1, curl to 8.14.1, xmlrpc-c to 1.60.05,
-mariadb-connector-c <i>aka</i> libmysql to 3.4.5, nng to 1.11, libffi to 3.5.1,
-and xz to 5.8.1. Upgraded userland programs openssh to 10.0p1, ethtool to 6.15,
-mailutils to 3.19, and nano editor to 8.5. Upgraded the BeaglePlay kernel to
-6.6.58-ti-arm64-r29. Upgraded all 64-bit Raspberry kernels to 6.12.36. Upgraded
-the .Net Runtime extension to 9.0.8 and the Python3 extension to 3.13.5.</p>
-</li>
-<li>
-<p>19 July 2025 -- In recent years I have written a lot of self-contained
-extension programs for <b>MuntsOS</b> using the Ada programming language
-(<i>e.g.</i> <b><tt>remoteio_server</tt></b>). See new <a href=
-"https://repo.munts.com/muntsos/doc/AppNote21-Ada-Extension-Programs.pdf">Application
-Note #21.</a> Managing extension programs has always been a little awkward
-because they needed to be installed to <b><tt>/boot/autoexec.d</tt></b> instead
-of <b><tt>/boot/packages</tt></b> like other extensions. I have now renamed
-<b><tt>/boot/packages</tt></b> to <b><tt>/boot/extensions</tt></b>, to contain
-both extension package files (any of <b><tt>.deb</tt></b>,
-<b><tt>.nupkg</tt></b>, or <b><tt>.rpm</tt></b>) as well as extension program
-files and have modifed <b><tt>/etc/rc</tt></b> and <b><tt>sysconfig</tt></b>
-accordingly. You can still install executable programs and scripts to
-<b><tt>/boot/autoexec.d</tt></b> but <b><tt>sysconfig</tt></b> will no longer
-attempt to manage them. Note that executable programs and scripts installed to
-either <b><tt>/boot/autoexec.d</tt></b> or <b><tt>/boot/extensions</tt></b>
-must run to completion quickly or detach themselves to run as background
-processes, to avoid blocking the <b>MuntsOS</b> startup script
-<b><tt>/etc/rc</tt></b>.</p>
-</li>
-<li>
-<p>31 July 2024 -- Added two new extension packages to support the <a href=
-"https://www.raspberrypi.com/products/build-hat">Raspberry Pi Build HAT</a>,
-which acts as a four port controller for <a href=
-"https://www.lego.com/en-us/themes/powered-up/about">LEGO® Powered Up</a>
-(<i>aka <b>LEGO® Power Functions 2.0</b></i>) actuators and sensors. With a
-<a href=
-"https://pv-productions.com/product/powered-up-to-power-functions-adapter">Powered
-Up to Power Functions Adapter</a> or a <a href=
-"https://pv-productions.com/product/powered-up-to-ev3-nxt-adapter">Powered Up
-to EV3/NXT Adapter</a> you can also control older LEGO® actuators and sensors.
-The <b><tt>python3-buildhat</tt></b> extension package installs the official
-<a href="https://github.com/RaspberryPiFoundation/python-build-hat">Build HAT
-Python library</a>. The <b><tt>buildhat-firmware</tt></b> extension package
-just downloads firmware to the Build Hat RP2040 microcontroller whenever the
-<b>MuntsOS</b> target computer reboots. Install <b><tt>python3</tt></b> and
-<b><tt>python3-buildhat</tt></b> for Python development and
-<b><tt>buildhat-firmware</tt></b> for all other programming languages.</p>
-</li>
-<li>
-<p>9 August 2025 -- Upgraded the Raspberry Pi Linux kernel to 6.12.41. Upgraded
-the .Net Runtime to 9.0.8. Started adding Ada, C#, and Python3 test programs
-for the Raspberry Pi Build HAT. Modified the <tt><b>nupkg</b></tt> utility
-program to handle shared library <b><tt>.so</tt></b> files in
-<b><tt>.nupkg</tt></b> files. Added the
-<b><tt>libsystem.io.ports-aarch64.nupkg</tt></b> extension package, which
-installs <b><tt>libSystem.IO.Ports.Native.so</tt></b> to
-<b><tt>/usr/local/lib</tt></b>, and is required by programs using <a href=
-"https://github.com/dotnet/iot/tree/main/src/devices/BuildHat">Iot.Device.Bindings.BuildHAT</a>.
-Started adding C# components and test programs using <a href=
-"https://www.nuget.org/packages/Iot.Device.Bindings">Iot.Device.Bindings</a>
-and <a href=
-"https://www.nuget.org/packages/System.Device.Gpio">System.Device.Gpio</a>.</p>
-</li>
-<li>
-<p>10 August 2025 -- I was playing around this morning with .Net programs using
-<b><tt>System.Device.Gpio</tt></b> and stumbled across an odd failure: My first
-test program <a href=
-"https://github.com/pmunts/muntsos/tree/master/examples/csharp/programs/dotnet-iot/test_led">
-test_led</a> runs fine on a Raspberry Pi 3 but fails on a Raspberry Pi 5 with
-the following exception:</p>
-<pre>
-Unhandled exception. System.DllNotFoundException: Unable to load shared library 'libgpiod.so.2' or one of its dependencies.</pre>
-<p>A little searching led me to <a href=
-"https://github.com/dotnet/iot/blob/main/src/System.Device.Gpio/System/Device/Gpio/Drivers/RaspberryPi3Driver.cs">
-RaspberryPi3Driver.cs</a>. This <b><a href="https://github.com/dotnet/iot">.Net
-IoT Libraries</a></b> source file contains some GPIO code for 64-bit Raspberry
-Pi Models, <i>but</i> it is missing platform detection code for the Raspberry
-Pi 5. After failing to recognize the Raspberry Pi 5, the code somewhere inside
-<b><tt>System.Device.Gpio</tt></b> fell back to <a href=
-"https://git.kernel.org/pub/scm/libs/libgpiod/libgpiod.git">libgpiod</a> V1,
-which subsequently failed because <b><tt>libgpiod.so.2</tt></b> was missing.
-This is a bit of a cautionary tale: The <b>.Net IoT Libraries</b> contain a lot
-of wonderful code, but it may not be well maintained. The Raspberry Pi 5 was
-released almost two years ago.</p>
-<p>I have added a new extension package
-<b><tt>libgpiod1-muntsos-aarch64.deb</tt></b> and for sanity's sake I have
-renamed the previous extension package
-<b><tt>libgpiod-muntsos-aarch64.deb</tt></b> to
-<b><tt>libgpiod2-muntsos-aarch64.deb</tt></b>. Confusingly,
-<b><tt>libgpiod1</tt></b> provides <b><tt>libgpiod.so.2</tt></b> and
-<b><tt>libgpiod2</tt></b> provides <b><tt>libgpiod.so.3</tt></b>.</p>
-I have also added <a href=
-"https://repo.munts.com/muntsos/doc/AppNote23-Flash-LED-C%23-.Net-IoT.pdf">Application
-Note #23</a>, which contains a complete example using
-<b><tt>System.Device.Gpio</tt></b> on a <b>MuntsOS</b> target computer.</li>
-<li>
-<p>16 August 2025 -- I noticed while trying to compile
-<b><tt>wioe5_ham1_nng_publisher.adb</tt></b> on a Debian 12 machine that the
-native <b><tt>gprbuild</tt></b> inserts a spurious <b><tt>-static</tt></b> into
-the link options. Ada programs for <b>MuntsOS</b> are <i>supposed</i> to always
-be linked dynamically. Some investigation revealed that Debian 11 native
-<b><tt>gprbuild</tt></b> and <a href="https://alire.ada.dev">Alire</a>
-<b><tt>gprbuild</tt></b> version 22.0.1 both work correctly while Debian 12
-native <b><tt>gprbuild</tt></b> and Alire <b><tt>gprbuild</tt></b> version
-25.0.1 both insert the erroneous <b><tt>-static</tt></b> link option. Very
-mysterious. See the ongoing <a href=
-"https://forum.ada-lang.io/t/gprbuild-and-link-options/3755/1">discussion
-thread</a> for more information. I added the <b><tt>-shared-libgcc</tt></b>
-link option to the cross-toolchain configuration project files
-<b><tt>aarch64-muntsos-linux-gnu.cgpr</tt></b> and
-<b><tt>riscv64-muntsos-linux-gnu.cgpr</tt></b>. I also cleaned up the
-<b><tt>gnatmake</tt></b> flags in <b><tt>ada.mk</tt></b> and
-<b><tt>crosstool.mk</tt></b> to keep compile and link flags consistent between
-building with <b><tt>gnatmake</tt></b> and <b><tt>gprbuild</tt></b>.</p>
-</li>
-<li>
-<p>18 August 2025 -- I have now incorporated a known working version of
-<b><tt>gprbuild</tt></b> (presently Alire <b><tt>gprbuild</tt></b> 25.0.1) into
-each of the cross-toolchain packages. A Linux distribution
-<b><tt>gprbuild</tt></b> is no longer necessary for building Ada programs for
-<b>MuntsOS</b> targets.</p>
-</li>
-<li>
-<p>23 August 2025 -- I have now upgraded my build server to <a href=
-"https://www.debian.org/News/2025/20250809">Debian 13 (Trixie)</a> and created
-the <a href="https://repo.munts.com/debian13">Munts Technologies Debian package
-repository for Debian 13</a>. I plan to maintain the Debian 12 package
-repository until the end of 2025.</p>
-</li>
-<li>
-<p>6 September 2025 -- I have added support for Linux Industrial I/O scaled ADC
-(Analog to Digital Converter) inputs. Some ADC chips with an internal voltage
-reference populate the scale factor files (<b><tt>in_voltage(Y)_scale</tt></b>
-<i>et al</i>) automatically. Others, especially those with an external voltage
-reference, require some magic in a device tree overlay to configure the
-scaling. I've updated the <b><tt>MUNTS-0018</tt></b>,
-<b><tt>Pi3ClickShield</tt></b>, and the <b><tt>Pi4ClickShield</tt></b> overlays
-to support scaling.</p>
-</li>
-<li>
-<p>12 September 2025 -- Added support for Linux Industrial I/O scaled DAC
-(Digital to Analog Converter) outputs. Added more Raspberry Pi device tree
-overlays for a number of ADC and DAC boards and modules.</p>
-</li>
-<li>
-<p>15 September 2025 -- Added support for Linux Industrial I/O temperature
-sensors. Added more Raspberry Pi device tree overlays for a number of
-temperature sensors and modules. Please note that most or all of the mikroBUS
-temperature sensor modules suffer significant self-heating from the CPU board.
-The Mikroelektronika <a href="https://www.mikroe.com/thermo-click">Thermo
-Click</a> thermocouple interface module is a notable exception, as the
-thermocouple junction can be placed away from the CPU board. <a href=
-"https://wiki.seeedstudio.com/Grove_System">Grove</a>, <a href=
-"https://digilent.com/shop/products/fpga-boards/expansion-modules/pmods/?CommunicationProtocol=I2C">
-Pmod</a>, <a href="https://www.sparkfun.com/qwiic">Qwiic</a>, and <a href=
-"https://learn.adafruit.com/introducing-adafruit-stemma-qt">Stemma</a>
-I<sup>2</sup>C temperature sensor modules can also be placed away from the CPU
-board.</p>
-</li>
-<li>
-<p>26 September 2025 -- Upgraded the .Net Runtime to 9.0.9. Upgraded the
-Raspberry Pi kernel to 6.12.48. Upgraded rpcbind to 1.2.8, iw to 6.17,
-mailutils to 3.20, and nano to 8.6. Imported latest (24 Sep 2025) boot files
-from Raspberry Pi OS. Fixed or suppressed compiler warnings in Ada example
-packages and programs. Symlink <b><tt>/run</tt></b> to <b><tt>/var/run</tt></b>
-for <b><tt>rpcbind</tt></b>.</p>
-</li>
-<li>
-<p>19 October 2025 -- <a href="https://crosstool-ng.github.io">Crosstool-NG</a>
-release 1.28.0 was published a few weeks ago. I have used it to build the 11th
-iteration of the <b>MuntsOS</b> cross-toolchain packages, upgrading binutils to
-2.45, GCC to 15.2.0, and glibc to 2.42. GCC 15.2.0 includes support for
-<a href="http://www.ada-auth.org/standards/ada22.html">Ada 2022</a> and a lot
-of Modula-2 fixes. All of the extensions, kernels, and thin servers have been
-rebuilt with the new GCC 15.2.0 toolchain. The previous GCC 14.2.0
-cross-toolchain packages, extensions, kernels, and thin servers have been moved
-to the <a href="https://repo.munts.com/muntsos/attic">attic.</a></p>
-</li>
-<li>
-<p>25 October 2025 -- I have a bag full of surplus 32-bit <a href=
-"https://www.raspberrypi.com/products/raspberry-pi-zero-w">Raspberry Pi Zero
-W</a>'s and evidently too much time on my hands. After upgrading the
-<b>MuntsOS</b> AArch64 and RISCV64 cross-toolchain packages to Crosstool-NG
-1.28.0 / GCC 15.2.0, I began to wonder if it would be possible to build a new
-cross-toolchain for the obsolete Raspberry Pi 1 as well, something I hadn't
-been able to do successfully since Crosstool-NG 1.24.0 / GCC 8.3.0. It worked,
-with a bonus of picking up GNU Modula-2 support on the Raspberry Pi 1 for the
-first time as well. Switching to the extremely compact
-<b><tt>defconfig</tt></b> format configuration files for Crosstool-NG makes it
-much easier to add new architectures. I have also successfully built a Linux
-USB Gadget 6.12.x kernel for the Raspberry Pi 1. The Raspberry Pi Zero is still
-useful in embedded systems for its lower power consumption and I am reinstating
-the Raspberry Pi 1 as a <b>MuntsOS</b> target computer on an experimental
-basis, concentrating on the Raspberry Pi Zero W. More work remains to complete
-the Raspberry Pi 1 kernels.</p>
-</li>
-<li>
-<p>7 November 2025 -- After days and weeks of failure trying to build a
-<b>MuntsOS</b> cross-toolchain for Windows x86-64 using Crosstool-NG, in
-desperation I tried out <a href=
-"https://gitlab.arm.com/tooling/gnu-devtools-for-arm">GNU Dev Tools for
-ARM</a>, which appears to be derived from the old <a href=
-"https://github.com/rsavoye/abe">Linaro ABE</a> cross-toolchain builder. I was
-able to successfully build <b>MuntsOS</b> cross-toolchains for Linux, kernels,
-and extensions for AArch64 and Raspberry Pi 1. Alas, building a <b>MuntsOS</b>
-cross-toolchain for Windows fails miserably. The only real advantage of GNU Dev
-Tools For ARM over Crosstool-NG, is that the former is designed to build from
-the tip of the GCC code tree, meaning it will likely be possible to build a GCC
-16.x or 17.x cross-toolchain much sooner than with Crosstool-NG. I have
-created, tested, and checked in all of the infrastructure to build and use
-toolchains built with GNU Dev Tools for ARM (<b><tt>TOOLCHAIN_REV=12</tt></b>,
-<b><tt>TOOLCHAIN_BUILDER=gnudevarm</tt></b>) but have not cut over to it
-yet.</p>
-</li>
-<li>
 <p>16 November 2025 -- I have <i>finally</i> created <b>MuntsOS</b>
 cross-toolchains that run on x86-64 Windows 10 or 11. The aggravation of
 dealing with Windows' case insensitive filenames and the dependency upon either
@@ -359,6 +54,14 @@ from git repositories. See the updated <a href=
 and <a href=
 "https://repo.munts.com/muntsos/doc/AppNote24-Setup-Win64.pdf">Application Note
 #24</a> for more information.</li>
+<li>
+<p>31 December 2025 -- As promised, I have ended my Debian 12 (Bookworm)
+package repository. Added <a href=
+"https://repo.munts.com/muntsos/doc/AppNote25-RabbitMQ-Client-Programs.pdf">Application
+Note #25</a>, about running <a href="https://www.rabbitmq.com">RabbitMQ
+Enterprise Message Broker</a> client programs on <b>MuntsOS</b> target
+computers.</p>
+</li>
 </ul>
 <h2>Quick Setup Instructions for the Impatient</h2>
 <p>Instructions for installing the <b>MuntsOS</b> cross-toolchain development
@@ -668,9 +371,7 @@ the corresponding GCC cross-toolchain package.</p>
 <p>Cross-toolchain packages containing GCC 15.2.0, including support for
 <a href="https://www.adaic.org/ada-resources/standards/ada22">Ada 2022</a>, and
 built for <a href="https://www.debian.org">Debian</a> Linux (x86-64 <i>and</i>
-ARM64) development host computers are available at either:</p>
-<a href="https://repo.munts.com/debian12">https://repo.munts.com/debian12</a>
-(Debian package repository)<br>
+ARM64) development host computers are available at:</p>
 <a href="https://repo.munts.com/debian13">https://repo.munts.com/debian13</a>
 (Debian package repository)<br>
 <a href=
