--- a/OLDNEWS.html
+++ b/OLDNEWS.html
@@ -354,8 +354,8 @@ computers.</p>
 </li>
 <li>
 <p>6 January 2026 -- Upgraded the Raspberry Pi kernel to 6.12.63. Added
-extension package libpaho-mqtt3. Added an Ada binding to Paho MQTT C to the
-Linux Simple I/O Library.</p>
+extension package <b><tt>libpaho-mqtt3</tt></b>. Added an Ada binding to Paho
+MQTT C to the Linux Simple I/O Library.</p>
 </li>
 <li>
 <p>14 January 2026 -- Upgraded the .Net Runtime to 10.0.2.</p>
@@ -365,8 +365,8 @@ Linux Simple I/O Library.</p>
 after Oracle ended support for <a href=
 "https://www.oracle.com/java/technologies/javase-embedded/javase-embedded.html">
 Java SE Embedded</a> in 2019. I have now added a new <i>experimental</i> Java
-Runtime extension package for <b>MuntsOS</b> AArch64 targets, built with
-<b><tt>jlink</tt></b>, from the OpenJDK 25.0.2 AArch64 release. The Java
+Runtime extension package for <b>MuntsOS</b> AArch64 targets, which is built
+with <b><tt>jlink</tt></b> from the OpenJDK 25.0.2 AArch64 release. The Java
 bindings in the Linux Simple I/O Library are incomplete and remain in the
 <a href="https://github.com/pmunts/libsimpleio/tree/master/attic">attic</a>. I
 will be working on those bindings for awhile to see if supporting Java will be
