Reinstated Java Runtime for MuntsOS
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@24283 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/README.html
+++ b/README.html
@@ -59,6 +59,17 @@ worthwhile.</p>
 <b><tt>gpio-server</tt></b> extension package still use the GPIO
 <b><tt>sysfs</tt></b> API.</p>
 </li>
+<li>
+<p>28 January 2026 -- Reinstatement of <a href="https://www.java.com">Java</a>
+runtime support (built from <a href="https://openjdk.org">OpenJDK</a> 25.0.2)
+for <b>MuntsOS</b> AArch64 targets is now complete, namely the
+<b><tt>java</tt></b> extension package, some client program program examples
+for the <b><tt>gpio-server</tt></b> extension package, and <a href=
+"https://repo.munts.com/muntsos/doc/AppNote26-Flash-LED-Java.pdf">Application
+Note #26</a> (formerly Application Note #8). While the <b>MuntsOS</b> effort is
+done, much work remains to finish the Java binding to the Linux Simple I/O
+Library.</p>
+</li>
 </ul>
 <h2>Quick Setup Instructions for the Impatient</h2>
 <p>Instructions for installing the <b>MuntsOS</b> cross-toolchain development
